<resources>
    <string name="app_name">wezCasting</string>
    <string name="Home">Home</string>
    <string name="Favourite">Favourite</string>
    <string name="Alert">Alert</string>
    <string name="Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hourly_Details">Hourly Details</string>
    <string name="Daily_Details">Daily Details</string>
    <string name="Weather">Weather</string>
    <string name="Cairo">Cairo</string>
    <string name="Temp_Unit">Temp Unit</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Wind_Unit">Wind Unit</string>
    <string name="KM">KM</string>
    <string name="Mile">Mile</string>
    <string name="My_MAPS_API_KEY">AIzaSyBFBwp1JRn4Na_QlNJ-JkxcXc1twQl6kQM</string>
</resources>